--- a/1/01config/.env
+++ b/1/01config/.env
@@ -6,12 +6,13 @@ DB_NAME=u470700275_09
 DB_PORT=3306
 
 # Configuración de errores
-ERROR_LOG_PATH=/1/02src/errors.log
+ERROR_LOG_PATH=/home/u470700275/domains/pruebasiginf.site/public_html/1/02src/errors.log
 MOSTRAR_ERRORES=true
 
 # Configuración de sesión
 SESSION_NAME=us_subred
-SESSION_SAVE_PATH=/1/02src/sessions
+SESSION_SAVE_PATH=/home/u470700275/domains/pruebasiginf.site/public_html/1/02src/sessions
+
 
 # Configuración de seguridad
 HASH_ALGORITHM=sha256
